autospy_macro/src/snapshots/autospy_macro__generate__tests__multiple_arguments_that_are_nested_references_converted_to_owned.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 193
expression: "generate_pretty(quote!\n{\n    trait TestTrait\n    { fn function(&self, argument1: &&&&str, argument2: &&&str); }\n})"
---
trait TestTrait {
    fn function(&self, argument1: &&&&str, argument2: &&&str);
}
#[cfg(any(test, not(feature = "test")))]
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<
        (<str as ToOwned>::Owned, <str as ToOwned>::Owned),
        (),
    >,
}
#[cfg(any(test, not(feature = "test")))]
impl TestTrait for TestTraitSpy {
    fn function(&self, argument1: &&&&str, argument2: &&&str) {
        self.function.spy(((***argument1).to_owned(), (**argument2).to_owned()))
    }
}
