autospy_macro/src/snapshots/autospy_macro__generate__tests__multiple_borrowed_arguments_converted_to_owned.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 232
expression: "generate_pretty(parse_quote!\n{ trait TestTrait { fn function(&self, argument1: &str, argument2: &str); } })"
---
trait TestTrait {
    fn function(&self, argument1: &str, argument2: &str);
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<
        (<str as ToOwned>::Owned, <str as ToOwned>::Owned),
        (),
    >,
}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    fn function(&self, argument1: &str, argument2: &str) {
        self.function.spy((argument1.to_owned(), argument2.to_owned()))
    }
}
