autospy_macro/src/snapshots/autospy_macro__generate__tests__multiple_impl_bounds_static_argument_converted_to_boxed_dyn.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 259
expression: "generate_pretty(parse_quote!\n{\n    trait TestTrait\n    { fn function(&self, argument: impl ToString + Debug + 'static); }\n})"
---
trait TestTrait {
    fn function(&self, argument: impl ToString + Debug + 'static);
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<Box<dyn ToString + Debug + 'static>, ()>,
}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    #[track_caller]
    fn function(&self, argument: impl ToString + Debug + 'static) {
        self.function.spy(Box::new(argument))
    }
}
