autospy_macro/src/snapshots/autospy_macro__generate__tests__multiple_methods_with_no_arguments.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 101
expression: "generate_pretty(quote!\n{ trait TestTrait { fn function1(&self); fn function2(&self); } })"
---
trait TestTrait {
    fn function1(&self);
    fn function2(&self);
}
#[cfg(test)]
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function1: autospy::SpyFunction<(), ()>,
    pub function2: autospy::SpyFunction<(), ()>,
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    fn function1(&self) {
        self.function1.spy(())
    }
    fn function2(&self) {
        self.function2.spy(())
    }
}
