autospy_macro/src/snapshots/autospy_macro__generate__tests__multiple_nested_references_in_argument_converted_to_owned_type.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 165
expression: "generate_pretty(quote!\n{ trait TestTrait { fn function(&self, argument: &&&str); } })"
---
trait TestTrait {
    fn function(&self, argument: &&&str);
}
#[cfg(test)]
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<<str as ToOwned>::Owned, ()>,
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    fn function(&self, argument: &&&str) {
        self.function.spy((**argument).to_owned())
    }
}
