autospy_macro/src/snapshots/autospy_macro__generate__tests__multiple_owned_arguments.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(parse_quote!\n{\n    trait TestTrait\n    { fn function(&self, argument1: String, argument2: String); }\n})"
---
trait TestTrait {
    fn function(&self, argument1: String, argument2: String);
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(String, String), ()>,
}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    #[track_caller]
    fn function(&self, argument1: String, argument2: String) {
        self.function.spy((argument1, argument2))
    }
}
