autospy_macro/src/snapshots/autospy_macro__generate__tests__single_owned_argument_is_moved_into_spy.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(quote!\n{ trait TestTrait { fn function(&self, argument: String); } })"
---
trait TestTrait {
    fn function(&self, argument: String);
}
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<<String as ToOwned>::Owned, ()>,
}
impl TestTrait for TestTraitSpy {
    fn function(&self, argument: String) {
        self.function.spy((argument).to_owned())
    }
}
