autospy_macro/src/snapshots/autospy_macro__generate__tests__single_static_impl_argument_converted_to_boxed_dyn.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 201
expression: "generate_pretty(quote!\n{\n    trait TestTrait { fn function(&self, argument: impl ToString + 'static); }\n})"
---
trait TestTrait {
    fn function(&self, argument: impl ToString + 'static);
}
#[cfg(test)]
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<Box<dyn ToString + 'static>, ()>,
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    fn function(&self, argument: impl ToString + 'static) {
        self.function.spy(Box::new(argument))
    }
}
